--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="cover"></div>
       <span class="heart">♥</span>
       <p class="paper" id="mainMessage">
-        Holiii, mi niña bella, espero que pases un día maravilloso hoy y aunque te me pongas más viejita
-        cumplas muchos muchos más y los disfrutes al máximo, te quiero muchoooo ♥
+        Holiii, mi niña bella, un añito más y cada día más viejita jsjsj disfruta mucho tu día y gracias
+        por ser tan maravillosa ¡Feliz cumpleaños!!, te quiero muchoooo ♥
       </p>
       <div class="letter"></div>
     </div>
